feat: update Horario model and initialization with new repository methods